# GreenLab

./: .gitignore  .markdownlint.json  CHANGELOG.md  Makefile  TODOS.md  architecture.html  backend.html  docker-compose.yml  go.work  go.work.sum
.github/workflows/: ci.yml
docker/: init-db.sql
docs/: README.md  api.md  architecture.md  deployment.md  development.md  services.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: alerts.ts  audit.ts  auth.ts  channels.ts  client.ts  devices.ts  fields.ts  index.ts  notifications.ts  query.ts  (+3 more)
nginx/: nginx.conf
scripts/: go.mod  send_data.go
sdk/go/: batch.go  batch_test.go  client.go  client_test.go  compress.go  compress_test.go  config.go  config_test.go  go.mod  go.sum  schema.go  schema_test.go
sdk/python/: pyproject.toml
sdk/python/greenlab/: __init__.py  batch.py  client.py  compress.py  config.py  schema.py
sdk/python/greenlab_iot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sdk/python/tests/: test_batch.py  test_client.py  test_schema.py
services/alert-notification/: Dockerfile  go.mod  go.sum
services/device-registry/: .mockery.yaml  Dockerfile  go.mod  go.sum  integration_test.go
services/iam/: .env.example  .mockery.yaml  Dockerfile  go.mod  go.sum
services/ingestion/: .mockery.yaml  Dockerfile  go.mod  go.sum  integration_test.go
services/normalization/: Dockerfile  go.mod  go.sum
services/query-realtime/: Dockerfile  go.mod  go.sum
services/supporting/: Dockerfile  go.mod  go.sum
shared/: go.mod  go.sum
(+294 files in other folders)
