[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "greenlab-iot"
version = "0.1.0"
description = "GreenLab IoT Python SDK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "msgpack>=1.0",
    "lz4>=4.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["greenlab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
